--- a/src/Busybee/PersonBundle/Resources/views/Address/script.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Address/script.html.twig
@@ -3,43 +3,74 @@
 {% trans_default_domain "BusybeePersonBundle" %}
 
 	<script>
-		$('.beeAddressList{{ classSuffix }}').change(function() {
+		$( '.beeAddressList{{ classSuffix }}' ).on( "autocompleteselect", function( event, ui ) {
 			$.ajax({
 				url: '{{ path('address_fetch') }}',	
-				data: {'id': $(this).val()},
+				data: {'id': ui.item.value},
 				type: 'POST',
 				success: function(data) {
 					$('.beeLine1{{ classSuffix }}').val(data.line1);
-					$('.beeTerritory{{ classSuffix }}').val(data.line2);
-					$('.beeLocalityList{{ classSuffix }}').val(data.locality);
+					$('.beeLine2{{ classSuffix }}').val(data.line2);
+					$('.beeStreetNumber{{ classSuffix }}').val(data.streetNumber);
+					$('.beeBuildingType{{ classSuffix }}').val(data.buildingType);
+					$('.beeBuildingNumber{{ classSuffix }}').val(data.bsuildingNumber);
+					$('.beeAddressValue{{ classSuffix }}').val(data.id);
+					$('.beeAddressList{{ classSuffix }}').val(data.addressListLabel);
 					$('#addressDisplay{{ classSuffix }}').html(data.address);
-					$(".beeLocalityList{{ classSuffix }}").trigger('change');
 				}
 			});
 		});
+
 		$('.beeAddressSave{{ classSuffix }}').click(function() {
 			$.ajax({
 				url: '{{ path('address_edit') }}',	
 				data: {
-					'id': $('.beeAddressList{{ classSuffix }}').val(),
+					'id': $('.beeAddressValue{{ classSuffix }}').val(),
 					'line1': $('.beeLine1{{ classSuffix }}').val(),
 					'line2': $('.beeLine2{{ classSuffix }}').val(),
+					'streetNumber': $('.beeStreetNumber{{ classSuffix }}').val(),
+					'buildingType': $('.beeBuildingType{{ classSuffix }}').val(),
+					'buildingNumber': $('.beeBuildingNumber{{ classSuffix }}').val(),
 					'locality_id': $('.beeLocalityList{{ classSuffix }}').val()
 				},
 				type: 'POST',
 				success: function(data) {
 					$('.beeLine1{{ classSuffix }}').val(data.line1);
 					$('.beeLine2{{ classSuffix }}').val(data.line2);
+					$('.beeStreetNumber{{ classSuffix }}').val(data.streetNumber),
+					$('.beeBuildingType{{ classSuffix }}').val(data.buildingType),
+					$('.beeBuildingNumber{{ classSuffix }}').val(data.buildingNumber),
 					$('#addressDisplay{{ classSuffix }}').html(data.address);
-					$(".beeAddressList{{ classSuffix }}").html(data.options);
-					$(".beeAddressList{{ classSuffix }}").val(data.id);
+					$('.beeAddressList{{ classSuffix }}').autocomplete( "option", "source", data.addressList );
+					$('.beeAddressList{{ classSuffix }}').autocomplete( "option", "disabled", data.addressDisabled );
+					$('.beeAddressList{{ classSuffix }}').data('ui-autocomplete')._trigger('select', 'autocompleteselect', {item:{label: data.addressListLabel, value: data.id}});
+					if (data.addressDisabled == 'true') {
+						$('.beeAddressList{{ classSuffix }}').autocomplete( 'disable' );
+						$('.beeAddressList{{ classSuffix }}').prop('disabled', true);
+					} else {
+						$('.beeAddressList{{ classSuffix }}').prop('disabled', false);
+						$('.beeAddressList{{ classSuffix }}').autocomplete( 'enable' );
+					}
 					$('#addressMessage{{ classSuffix }}').show()
 					$('#addressMessage{{ classSuffix }}').removeClass().addClass('row alert alert-' + data.status);
 					$('#addressMessage{{ classSuffix }}').html(data.message);
 					$('#addressMessage{{ classSuffix }}').fadeOut(3000);
-					$('.beeLocalityList{{ classSuffix }}').val(data.locality);
-					$(".beeLocalityList{{ classSuffix }}").trigger('change');
 				}
 			});
+		});
+		$('.beeAddressClear{{ classSuffix }}').click(function() {
+			$('.beeLine1{{ classSuffix }}').val('');
+			$('.beeLine2{{ classSuffix }}').val('');
+			$('.beeStreetNumber{{ classSuffix }}').val('');
+			$('.beeBuildingType{{ classSuffix }}').val('');
+			$('.beeBuildingNumber{{ classSuffix }}').val('');
+			$('.beeLocality{{ classSuffix }}').val('');
+			$('.beeTerritory{{ classSuffix }}').val('');
+			$('.beeCountry{{ classSuffix }}').val('');
+			$('.beePostCode{{ classSuffix }}').val('');
+			$('.beeLocalityList{{ classSuffix }}').val(0);
+			$('.beeAddressValue{{ classSuffix }}').val(0);
+			$('.beeAddressList{{ classSuffix }}').val('');
+			$('#addressDisplay{{ classSuffix }}').html("<pre> </pre>");
 		});
 	</script>
