--- a/src/Busybee/PersonBundle/Resources/views/Person/contact.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/contact.html.twig
@@ -6,16 +6,28 @@
 
 <div class="panel panel-primary busybee-panel">
 	<div class="panel-heading">
-		<h3 class="panel-title">{{ 'person.title'|trans}}
+		<h3 class="panel-title">{{ 'person.contact'|trans}}
 		<button title='{{ 'person.return'|trans}}' type="button" class="halflings halflings-hand-left btn btn-primary" onClick="window.open('{{ path('person_manage') }}','_self')" style="float: right"></button>
 		{% if id != 'Add' %}
 			<button title='{{ 'person.add.title'|trans}}' type="button" class="halflings halflings-plus-sign btn btn-primary" onClick="window.open('{{ path('person_edit', {'id': 'Add'}) }}','_self')" style="float: right"></button>
 		{% endif %}
+		<button title='{{ 'form.cancel'|trans({}, 'BusybeeHomeBundle') }}' type="reset" class="halflings halflings-remove-circle btn btn-info" style="float: right"></button>
+		<button title='{{ 'form.save'|trans({}, 'BusybeeHomeBundle')}}' type="submit" class="halflings halflings-save btn btn-success" style="float: right"></button>
 		</h3>
 	</div>
 	<div class="panel-body">
 
 		<div class="container-fluid">
+			<div class="row">
+				<div class="col-sm-6 col-sm-offset-6 well">
+					{{ form_row(form.email) }}
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-6 col-sm-offset-6 well">
+					{{ form_row(form.email2) }}
+				</div>
+			</div>
 			<div class="row">
 				<div class="col-sm-6 col-sm-offset-6 well">
 					{{ form_row(form.website) }}
