--- a/src/Busybee/PersonBundle/Resources/views/Person/contact.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/contact.html.twig
@@ -11,28 +11,66 @@
 		{% if id != 'Add' %}
 			<button title='{{ 'person.add.title'|trans}}' type="button" class="halflings halflings-plus-sign btn btn-primary" onClick="window.open('{{ path('person_edit', {'id': 'Add'}) }}','_self')" style="float: right"></button>
 		{% endif %}
-		<button title='{{ 'form.cancel'|trans({}, 'BusybeeHomeBundle') }}' type="reset" class="halflings halflings-remove-circle btn btn-info" style="float: right"></button>
+		<button title='{{ 'form.cancel'|trans({}, 'BusybeeHomeBundle') }}' type="button" onClick="location.href='{{ path('person_edit', {'id': id}) }}'" class="halflings halflings-remove-circle btn btn-info" style="float: right"></button>
 		<button title='{{ 'form.save'|trans({}, 'BusybeeHomeBundle')}}' type="submit" class="halflings halflings-save btn btn-success" style="float: right"></button>
 		</h3>
 	</div>
 	<div class="panel-body">
-
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-sm-6 col-sm-offset-6 well">
-					{{ form_row(form.email) }}
+				<div class="col-sm-6">
+					<div class="panel panel-info busybee-panel">
+						<div class="panel-heading">
+							<h3 class="panel-title">{{ form_label(form.phone) }}
+								<button title='{{ 'contact.phone.add'|trans}}' type="button" class="halflings halflings-plus-sign btn btn-info" id="addPhoneButton" style="float: right"></button>
+							</h3>
+						</div>
+						<div class="panel-body phoneNumberList" data-prototype="{% filter escape %}{{ include('BusybeePersonBundle:Person:phoneProtoType.html.twig') }}{% endfilter %}">
+							<p class="alert alert-warning">{{ 'contact.phone.saveWarning'|trans }}</p>
+							{% for phone in form.phone %}
+								<div class="well phoneNumber" id="phone_{{ phone.vars.value.id }}">
+									<div class="row">
+										<div class="col-sm-6">
+											{{ form_row(phone.phoneType) }}
+										</div>
+										<div class="col-sm-6">
+											{{ form_row(phone.countryCode) }}
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-sm-10">
+											{{ form_row(phone.phoneNumber) }}
+										</div>
+										<div class="col-sm-2 text-center">
+											<br />
+											<button title='{{ 'contact.phone.delete'|trans}}' type="button" class="halflings halflings-remove-sign btn btn-warning deletePhoneButton" id="deletePhone_{{ phone.vars.value.id }}" style="float: right"></button>
+										</div>
+									</div>
+								</div>
+							{% endfor %}
+						</div>
+					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-6 col-sm-offset-6 well">
-					{{ form_row(form.email2) }}
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-6 col-sm-offset-6 well">
-					{{ form_row(form.website) }}
+				<div class="col-sm-6">
+					<div class="row">
+						<div class="col-sm-12 well">
+							{{ form_row(form.email) }}
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-12 well">
+							{{ form_row(form.email2) }}
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-12 well">
+							{{ form_row(form.website) }}
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
+
+
