--- a/src/Busybee/PersonBundle/Resources/views/Person/contact.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/contact.html.twig
@@ -39,7 +39,7 @@
 									</div>
 									<div class="row">
 										<div class="col-sm-10">
-											{{ form_row(phone.phoneNumber) }}
+											{{ form_row(phone.phoneNumber, {'value': setting.get('Phone.Display', null, {'phone': phone.phoneNumber.vars.value}) } ) }}
 										</div>
 										<div class="col-sm-2 text-center">
 											<br />
