--- a/src/Busybee/PersonBundle/Resources/views/Person/edit.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/edit.html.twig
@@ -17,6 +17,7 @@
 {% block headerLead %}{% if id == 'Add' %}{{ 'person.staff.add.description'|trans }}{% else %}{{ 'person.staff.edit.description'|trans }}{% endif %}{% endblock headerLead %}
 
 {% block contentContainer %}
+{{ all_form_errors(fullForm, "div", "alert alert-danger fadeAlert") }}
 {{ form_start(form) }}
 <div id="personTabs">
 	<ul class="nav nav-tabs" role="tablist">
@@ -198,6 +199,10 @@
 			
 			$('#addPhoneButton').hide();
 		});
+		
+		if ( $(".fadeAlert").length ) {
+ 	   		$(".fadeAlert").fadeOut(3000);
+		}
 
 	</script>
 
