--- a/src/Busybee/PersonBundle/Resources/views/Locality/edit.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Locality/edit.html.twig
@@ -40,7 +40,7 @@
 				</div>
 			</div>
 			<div class="col-sm-4">
-				<p class="alert alert-default">{{ 'address.help.manage'|trans }}</p>
+				<p class="alert alert-warning">{{ 'address.help.manage'|trans }}</p>
 			</div>
 		</div>
 	</div>
