--- a/src/Busybee/HomeBundle/Resources/views/Menu/dropdown.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Menu/dropdown.html.twig
@@ -2,19 +2,17 @@
 
 {% trans_default_domain "BusybeeHomeBundle" %}
 
-{% if (menu.grant is defined and is_granted(menu.grant)) or menu.grant is not defined %}
+{% if (menu.role is defined and is_granted(menu.role)) or menu.role is not defined %}
 	<li class="dropdown">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" data-submenu>{{ menu.label|trans }}<span class="caret"></span></a>
 		<ul class="dropdown-menu">
-			{% for drop in menu.dropdown %}
-				{% if drop.submenu is defined %}
+			{% for drop in get_menuItems(menu.menu) %}
+				{% if drop.menu is defined %}
 					{% include 'BusybeeHomeBundle:Menu:submenu.html.twig' with {'menu': drop} %}
-				{% else %}
-					{% if (drop.grant is defined and is_granted(drop.grant)) or drop.grant is not defined %}
-						{% set route = drop.path.route %}
-					<li><a href="{{ path(route, drop.path.parameters) }}">{{ drop.label|trans }}</a></li> 
+				{% elseif drop.route is defined %}
+					{% if (drop.role is defined and is_granted(drop.role)) or drop.role is not defined %}
+					<li><a href="{{ path(drop.route, drop.parameters) }}">{{ drop.label|trans }}</a></li> 
 					{% endif %}
-
 				{% endif %}
 			{% endfor %}
 		</ul>
