--- a/src/Busybee/HomeBundle/Resources/views/Menu/dropdown.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Menu/dropdown.html.twig
@@ -4,14 +4,16 @@
 
 {% if (menu.role is defined and is_granted(menu.role)) or menu.role is not defined %}
 	<li class="dropdown">
-		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" data-submenu>{{ menu.label|trans }}<span class="caret"></span></a>
+		{% set translate = 'BusybeeHomeBundle' %}{% if menu.translate is defined %}{% set translate = menu.translate %}{% endif %}
+		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" data-submenu>{{ menu.label|trans({}, translate) }}<span class="caret"></span></a>
 		<ul class="dropdown-menu">
 			{% for drop in get_menuItems(menu.menu) %}
 				{% if drop.menu is defined %}
 					{% include 'BusybeeHomeBundle:Menu:submenu.html.twig' with {'menu': drop} %}
 				{% elseif drop.route is defined %}
 					{% if (drop.role is defined and is_granted(drop.role)) or drop.role is not defined %}
-					<li><a href="{{ path(drop.route, drop.parameters) }}">{{ drop.label|trans }}</a></li> 
+						{% set translate = 'BusybeeHomeBundle' %}{% if drop.translate is defined %}{% set translate = drop.translate %}{% endif %}
+					<li><a href="{{ path(drop.route, drop.parameters) }}">{{ drop.label|trans({}, translate) }}</a></li> 
 					{% endif %}
 				{% endif %}
 			{% endfor %}
