--- a/src/Busybee/HomeBundle/Resources/views/Menu/submenu.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Menu/submenu.html.twig
@@ -5,14 +5,16 @@
 
 {% if (menu.role is defined and is_granted(menu.role)) or menu.role is not defined %}
 	<li class="dropdown-submenu">
-		<a tabindex="0">{{ menu.label|trans }}</a>
+		{% set translate = 'BusybeeHomeBundle' %}{% if menu.translate is defined %}{% set translate = menu.translate %}{% endif %}
+		<a tabindex="0">{{ menu.label|trans({}, translate) }}</a>
 		<ul class="dropdown-menu">
 			{% for drop in get_menuItems(menu.menu) %}
 				{% if (drop.role is defined and is_granted(drop.role)) or drop.role is not defined %}
 					{% if drop.menu is defined %}
 						{% include 'BusybeeHomeBundle:Menu:submenu.html.twig' with {'menu': drop} %}
 					{% elseif drop.route is defined %}
-						<li><a href="{{ path(drop.route, drop.parameters) }}">{{ drop.label|trans }}</a></li>  
+						{% set translate = 'BusybeeHomeBundle' %}{% if drop.translate is defined %}{% set translate = drop.translate %}{% endif %}
+						<li><a href="{{ path(drop.route, drop.parameters) }}">{{ drop.label|trans({}, translate) }}</a></li>  
 					{% endif %}
 				{% endif %}
 			{% endfor %}
