--- a/src/Busybee/HomeBundle/Resources/views/Menu/submenu.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Menu/submenu.html.twig
@@ -2,7 +2,6 @@
 
 {% trans_default_domain "BusybeeHomeBundle" %}
 
-
 {% if (menu.role is defined and is_granted(menu.role)) or menu.role is not defined %}
 	<li class="dropdown-submenu">
 		{% set translate = 'BusybeeHomeBundle' %}{% if menu.translate is defined %}{% set translate = menu.translate %}{% endif %}
@@ -10,11 +9,13 @@
 		<ul class="dropdown-menu">
 			{% for drop in get_menuItems(menu.menu) %}
 				{% if (drop.role is defined and is_granted(drop.role)) or drop.role is not defined %}
-					{% if drop.menu is defined %}
-						{% include 'BusybeeHomeBundle:Menu:submenu.html.twig' with {'menu': drop} %}
-					{% elseif drop.route is defined %}
-						{% set translate = 'BusybeeHomeBundle' %}{% if drop.translate is defined %}{% set translate = drop.translate %}{% endif %}
-						<li><a href="{{ path(drop.route, drop.parameters) }}">{{ drop.label|trans({}, translate) }}</a></li>  
+					{% if (drop.test is defined and test_menuItem(drop.test)) or drop.test is not defined %}
+						{% if drop.menu is defined %}
+							{% include 'BusybeeHomeBundle:Menu:submenu.html.twig' with {'menu': drop} %}
+						{% elseif drop.route is defined %}
+							{% set translate = 'BusybeeHomeBundle' %}{% if drop.translate is defined %}{% set translate = drop.translate %}{% endif %}
+							<li><a href="{{ path(drop.route, drop.parameters) }}">{{ drop.label|trans({}, translate) }}</a></li>  
+						{% endif %}
 					{% endif %}
 				{% endif %}
 			{% endfor %}
