--- a/src/Busybee/HomeBundle/Resources/views/Default/template.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Default/template.html.twig
@@ -27,12 +27,14 @@
 	
     <div class="container theme-showcase" role="main">
 	
+		{% block titleContainer %}
 		<div class="jumbotron">
-			<img src="{{ asset('img/bee.png') }}" height="150" alt="Busybee" style="float: right;" />
+			<img src="{{ asset('img/bee.png') }}" alt="Busybee" id="bee-logo" />
 			<h1>{{ get_setting('Organisation.Name') }}</h1>
 			<h2>{% block headerTitle %}Busybee{% endblock headerTitle %}</h2>
 			<p class="lead">{% block headerLead %}Busybee{% endblock headerLead %}</p>
 		</div>
+		{% endblock titleContainer %}
 
 		{{ include('BusybeeHomeBundle:Default:flash.html.twig') }}
 	
