--- a/src/Busybee/PersonBundle/Resources/views/Person/contact.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/contact.html.twig
@@ -39,7 +39,7 @@
 									</div>
 									<div class="row">
 										<div class="col-sm-10">
-											<br/>{{ form_row(phone.phoneNumber, {'value': setting.get('Phone.Display', null, {'phone': phone.phoneNumber.vars.value}) } ) }}
+											<br/>{{ form_row(phone.phoneNumber, {'value': get_setting('Phone.Display', null, {'phone': phone.phoneNumber.vars.value}) } ) }}
 										</div>
 										<div class="col-sm-2 text-center">
 											<br />
@@ -51,6 +51,7 @@
 						</div>
 					</div>
 				</div>
+{% do form.phone.setRendered %}
 				<div class="col-sm-6">
 					<div class="row">
 						<div class="col-sm-12 well">
