--- a/src/Busybee/PersonBundle/Resources/views/Person/index.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/index.html.twig
@@ -14,7 +14,7 @@
 	{% include 'PaginationBundle:Default:index.html.twig' %}
 	<div class="panel panel-primary busybee-panel">
 		<div class="panel-heading">
-			<h3 class="panel-title">{{ 'address.title'|trans}}</h3>
+			<h3 class="panel-title">{{ 'people.title'|trans}}</h3>
 		</div>
 		<div class="panel-body">
 			<div class="container-fluid well">
